--- a/PreferenceTestExperiment/MainWindow.xaml
+++ b/PreferenceTestExperiment/MainWindow.xaml
@@ -40,7 +40,7 @@
         <Label Content="Organized" Style="{StaticResource Light}" HorizontalAlignment="Right" FontSize="20" Margin="0,317,41.2,0" Height="37" VerticalAlignment="Top"/>
         <Label Content="Uncluttered" Style="{StaticResource Light}" HorizontalAlignment="Right" FontSize="20" Margin="0,354,30.2,0" Height="37" VerticalAlignment="Top"/>
         <TextBlock Text="How close do you think is the icon to its intended meaning?" TextWrapping="Wrap" Style="{StaticResource custom}" HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="30" Margin="0,396,294.2,0" Width="431" />
-
+        <Label Content="Program developed by Matthew Paladine Rivera" Opacity="0.30" HorizontalAlignment="Left" Margin="10,616,0,0" VerticalAlignment="Top" Width="270"/>
         <Label Content="Unrecognizable" Style="{StaticResource Light}" HorizontalAlignment="Right" FontSize="20" Margin="0,466,523.2,0" Height="37" VerticalAlignment="Top"/>
         <Label Content="Abstract" Style="{StaticResource Light}" HorizontalAlignment="Right" FontSize="20" Margin="0,503,523.2,0" Height="37" VerticalAlignment="Top"/>
         <Label Content="Incompatible" Style="{StaticResource Light}" HorizontalAlignment="Right" FontSize="20" Margin="0,540,523.2,0" Height="37" VerticalAlignment="Top"/>
